k8s-apps/xwiki/rendered.yaml
---
# Source: xwiki/charts/mysql/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: xwiki-mysql
  namespace: "open4goods"
  labels:
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/version: 8.4.4
    helm.sh/chart: mysql-12.3.2
    app.kubernetes.io/part-of: mysql
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: xwiki
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: mysql
      app.kubernetes.io/version: 8.4.4
      helm.sh/chart: mysql-12.3.2
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    # Allow connection from other cluster pods
    - ports:
        - port: 3306
---
# Source: xwiki/charts/mysql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: xwiki-mysql-headless
  namespace: "open4goods"
  labels:
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/version: 8.4.4
    helm.sh/chart: mysql-12.3.2
    app.kubernetes.io/part-of: mysql
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
  selector:
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: primary
---
# Source: xwiki/charts/mysql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: xwiki-mysql
  namespace: "open4goods"
  labels:
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/version: 8.4.4
    helm.sh/chart: mysql-12.3.2
    app.kubernetes.io/part-of: mysql
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
      nodePort: null
  selector:
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/name: mysql
    app.kubernetes.io/part-of: mysql
    app.kubernetes.io/component: primary
---
# Source: xwiki/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  xwiki
  labels:
    app.kubernetes.io/name: xwiki
    helm.sh/chart: xwiki-1.5.5
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: 
  sessionAffinity: ClientIP
  selector:
    app.kubernetes.io/name: xwiki
    app.kubernetes.io/instance: xwiki
---
# Source: xwiki/charts/mysql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: xwiki-mysql
  namespace: "open4goods"
  labels:
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/version: 8.4.4
    helm.sh/chart: mysql-12.3.2
    app.kubernetes.io/part-of: mysql
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  podManagementPolicy: ""
  selector:
    matchLabels:
      app.kubernetes.io/instance: xwiki
      app.kubernetes.io/name: mysql
      app.kubernetes.io/part-of: mysql
      app.kubernetes.io/component: primary
  serviceName: xwiki-mysql-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configuration: e198c9f4d10a7f61748adad0a3360877c135802418b2be000ba95c73fd789a3c
      labels:
        app.kubernetes.io/instance: xwiki
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mysql
        app.kubernetes.io/version: 8.4.4
        helm.sh/chart: mysql-12.3.2
        app.kubernetes.io/part-of: mysql
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: xwiki-mysql
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: xwiki
                    app.kubernetes.io/name: mysql
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: mysql
          image: docker.io/bitnami/mysql:8.4.4-debian-12-r7
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: mysql
              containerPort: 3306
          livenessProbe:
            exec:
              command:
              - /bin/bash
              - |
                password_aux="${MYSQL_ROOT_PASSWORD:-}"
                if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                    password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                fi
                mysqladmin ping --protocol=tcp -h 127.0.0.1 -uroot -p"${password_aux}"
            failureThreshold: 3
            initialDelaySeconds: 80
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - -ec
              - |
                password_aux="${MYSQL_ROOT_PASSWORD:-}"
                if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                    password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                fi
                mysqladmin ping --protocol=tcp -h 127.0.0.1 -uroot -p"${password_aux}"
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin ping -uroot -p"${password_aux}" | grep "mysqld is alive"
          startupProbe:
            exec:
              command:
              - /bin/bash
              - -ec
              - |
                password_aux="${MYSQL_ROOT_PASSWORD:-}"
                if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                    password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                fi
                mysqladmin ping --protocol=tcp -h 127.0.0.1 -uroot -p"${password_aux}"
            failureThreshold: 10
            initialDelaySeconds: 150
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin ping -uroot -p"${password_aux}" | grep "mysqld is alive"
          resources: 
            limits:
              cpu: 400m
              memory: 2Gi
            requests:
              cpu: 400m
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /bitnami/mysql
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mysql/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mysql/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mysql/logs
              subPath: app-logs-dir
            - name: custom-init-scripts
              mountPath: /docker-entrypoint-initdb.d
            - name: config
              mountPath: /opt/bitnami/mysql/conf/my.cnf
              subPath: my.cnf
            - name: mysql-credentials
              mountPath: /opt/bitnami/mysql/secrets/
      volumes:
        - name: config
          configMap:
            name: xwiki-mysql
        - name: custom-init-scripts
          configMap:
            name: xwiki-mysql-init-scripts
        - name: mysql-credentials
          secret:
            secretName: xwiki-mysql
            items:
              - key: mysql-root-password
                path: mysql-root-password
              - key: mysql-password
                path: mysql-password
        - name: empty-dir
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app.kubernetes.io/instance: xwiki
          app.kubernetes.io/name: mysql
          app.kubernetes.io/component: primary
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "2Gi"
        
        selector:
          matchLabels:
            type: mysql
---
# Source: xwiki/templates/xwiki.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: xwiki
  labels:
    app.kubernetes.io/name: xwiki
    helm.sh/chart: xwiki-1.5.5
    app.kubernetes.io/instance: xwiki
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  replicas: 1
  serviceName: xwiki
  selector:
    matchLabels:
      app.kubernetes.io/name: xwiki
      app.kubernetes.io/instance: xwiki
  template:
    metadata:
      annotations:
        # Annotations to rollout changes on configs on workload
        checksum/configmap: 51e5f5e202d8bc43c5675bcf70da5b5b5a2ba9f693ec53466faa815af6c3c405
        checksum/initialization-configmaps: 779fb2a9731056f94c51eb81b132e0c950d10873edaee039e2df5a6a9c86460d
        checksum/initialization-secrets: 70367779dfae87485b30a4856d13561d88960b32bb4480a7740cd873b5556928
      labels:
        app.kubernetes.io/name: xwiki
        helm.sh/chart: xwiki-1.5.5
        app.kubernetes.io/instance: xwiki
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: xwiki-sa
      containers:
        - name: xwiki
          image: xwiki:lts-mysql-tomcat
          imagePullPolicy: IfNotPresent
          command: ["/bin/bash", "/entrypoint/start.sh"]
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi
          volumeMounts:
            - name: xwiki-data
              mountPath: /usr/local/xwiki/data
            - name: configmaps
              mountPath: /configmaps
            - name: entrypoint
              mountPath: /entrypoint
              readOnly: true
      volumes:
        - name: configmaps
          configMap:
            name: xwiki-init-scripts
        - name: secrets
          secret:
            secretName: xwiki-init-scripts
        - name: entrypoint
          emptyDir:
            sizeLimit: 1Mi
            medium: Memory
        - name: xwiki-data
  volumeClaimTemplates:
    - metadata:
        name: xwiki-data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "5Gi"
